site/docs/v0.4.1/en/components/card.mdx
# Card

Card groups related content and actions into a self-contained region whose boundary serves information structure rather than decoration.

<Preview class="w-full max-w-sm">
<div class="grid w-full gap-3" data-card-primary-demo="en">
  <p class="text-sm text-muted-foreground" data-card-status aria-live="polite">Enter credentials to continue</p>
  <div class="card">
    <header>
      <h2>Login to your account</h2>
      <p>Enter your email below to login to your account</p>
      <div class="card-action">
        <button type="button" class="btn" data-variant="link" data-card-action="signup">Sign Up</button>
      </div>
    </header>
    <section>
      <form class="grid gap-6" data-card-form data-preview-onsubmit="return false">
        <div class="grid gap-2">
          <label class="label" for="demo-card-email">Email</label>
          <input class="input" type="email" id="demo-card-email" data-card-field="email" placeholder="m@example.com" required />
        </div>
        <div class="grid gap-2">
          <div class="flex items-center">
            <label class="label" for="demo-card-password">Password</label>
            <a href="#card-forgot" class="ms-auto inline-flex min-h-6 items-center text-sm underline-offset-4 hover:underline" data-card-action="forgot">Forgot your password?</a>
          </div>
          <input class="input" type="password" id="demo-card-password" data-card-field="password" required />
        </div>
      </form>
    </section>
    <footer class="flex-col gap-2">
      <button type="button" class="btn w-full" data-card-action="login" data-preview-onclick onclick="const demo = this.closest('[data-card-primary-demo]'); const email = demo.querySelector('[data-card-field=email]'); const status = demo.querySelector('[data-card-status]'); status.textContent = email.value ? 'Ready to login as ' + email.value : 'Email is required';">Login</button>
      <button type="button" class="btn w-full" data-variant="outline" data-card-action="google">Login with Google</button>
    </footer>
  </div>
</div>
</Preview>

## Usage

<Steps>
  <Step title="Include CSS">

Import Tailwind and one full A3S UI style bundle.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/a3s.css";
```

Or import only the base CSS, Card component CSS, and one style pack.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/card.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

Using CDN or bundler imports? See the [Installation page](/installation).

  </Step>
  <Step title="Add your card HTML">

```html
<div class="card">
  <header>
    <h2>Card Title</h2>
    <p>Card Description</p>
    <div class="card-action">Card Action</div>
  </header>
  <section> <p>Card Content</p></section>
  <footer>
    <p>Card Footer</p>
  </footer>
</div>
```

  </Step>
</Steps>

## HTML structure

<dl>
  <dt><code>&lt;div class="card"&gt;</code></dt>
  <dd>
    The card container. Use <code>data-size="sm"</code> for a denser layout.
    <dl>
      <dt><code>&lt;header&gt;</code></dt>
      <dd>
        The card header.
        <dl>
          <dt><code>&lt;h2&gt;</code> or <code>&lt;h3&gt;</code></dt>
          <dd>The card title.</dd>
          <dt><code>&lt;p&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
          <dd>The card description.</dd>
          <dt><code>&lt;div class="card-action"&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
          <dd>Action or metadata placed in the top-right of the header. Use <code>&lt;menu class="card-action"&gt;</code> when the content is a list of commands.</dd>
        </dl>
      </dd>
      <dt><code>&lt;section&gt;</code></dt>
      <dd>The main card content.</dd>
      <dt><code>&lt;footer&gt;</code> <span class="badge" data-variant="secondary">Optional</span></dt>
      <dd>Footer actions or secondary content at the bottom of the card.</dd>
    </dl>
  </dd>
</dl>

## Examples

### Size

Use `data-size="sm"` to set the size of the card to small. The small size variant uses smaller spacing.

<Preview class="w-full max-w-sm">
<div class="card" data-size="sm">
  <header>
    <h2>Small Card</h2>
    <p>This card uses the small size variant.</p>
    <div class="card-action">
      <button type="button" class="btn" data-size="sm" data-variant="outline">Action</button>
    </div>
  </header>
  <section> <p>The card component supports a size attribute that can be set to <code>sm</code> for a more compact appearance.</p></section>
</div>
</Preview>

### Image

Add an image before the card header to create a card with an image.

<Preview class="w-full max-w-sm">
<div class="card">
  <A3SAssetImage
    alt="Event cover"
    class="aspect-video w-full object-cover"
    path="/assets/images/screenshot.png"
  />
  <header>
    <h2>Design systems meetup</h2>
    <p>A practical talk on component APIs, accessibility, and shipping faster.</p>
    <div class="card-action">
      <span class="badge" data-variant="secondary">Featured</span>
    </div>
  </header>
  <footer>
    <button type="button" class="btn w-full">View Event</button>
  </footer>
</div>
</Preview>

## RTL

Add `dir="rtl"` to the card or an ancestor.

<Preview class="w-full max-w-sm">
<div class="card" dir="rtl">
  <header>
    <h2>تسجيل الدخول إلى حسابك</h2>
    <p>أدخل بريدك الإلكتروني أدناه لتسجيل الدخول إلى حسابك</p>
    <div class="card-action">
      <button type="button" class="btn" data-variant="link">إنشاء حساب</button>
    </div>
  </header>
  <section>
    <form class="grid gap-6">
      <div class="grid gap-2">
        <label class="label" for="demo-card-rtl-email">البريد الإلكتروني</label>
        <input class="input" type="email" id="demo-card-rtl-email" placeholder="m@example.com" required />
      </div>
      <div class="grid gap-2">
        <div class="flex items-center">
          <label class="label" for="demo-card-rtl-password">كلمة المرور</label>
          <a href="#" class="ms-auto inline-flex min-h-6 items-center text-sm underline-offset-4 hover:underline">نسيت كلمة المرور؟</a>
        </div>
        <input class="input" type="password" id="demo-card-rtl-password" required />
      </div>
    </form>
  </section>
  <footer class="flex-col gap-2">
    <button type="button" class="btn w-full">تسجيل الدخول</button>
    <button type="button" class="btn w-full" data-variant="outline">تسجيل الدخول باستخدام Google</button>
  </footer>
</div>
</Preview>

## React

```tsx
import { Card } from "@a3s-lab/ui/react";

export function Example() {
  return (
    <Card>
      <header>
        <h2>Card Title</h2>
        <p>Card Description</p>
        <div className="card-action">Card Action</div>
      </header>
      <section>
        {" "}
        <p>Card Content</p>
      </section>
      <footer>
        <p>Card Footer</p>
      </footer>
    </Card>
  );
}
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.

## Vue

```vue
<script setup lang="ts">
import { Card } from "@a3s-lab/ui/vue";
</script>

<template>
  <Card>
    <header>
      <h2>Card Title</h2>
      <p>Card Description</p>
      <div class="card-action">Card Action</div>
    </header>
    <section><p>Card Content</p></section>
    <footer>
      <p>Card Footer</p>
    </footer>
  </Card>
</template>
```

The adapter replaces only the documented semantic root and adds no wrapper; its children keep the HTML contract shown above.
